erDiagram
    tenants ||--o{ users : "has many"
    tenants ||--o{ tenant_modules : "has"
    tenants ||--o{ tenant_feature_flags : "has"
    tenants ||--o{ tenant_registrations : "originates"
    tenants ||--o{ tenant_locations : "operates"
    tenants ||--o{ subscriptions : "pays for"
    tenants ||--o{ invoices : "receives"
    tenants ||--o{ audit_events : "logged"
    tenants ||--o{ event_outbox : "emits"
    tenants ||--o{ menu_categories : "owns"
    tenants ||--o{ pos_tickets : "creates"

    users ||--o{ user_roles : "assigned"
    users ||--o{ tenant_location_users : "assigned"
    users ||--o{ audit_events : "actor"

    tenant_modules {
        uuid tenant_id
        string module_id
        boolean enabled
        string source
    }

    tenant_feature_flags {
        uuid tenant_id
        string module_id
        string feature_key
        boolean enabled
        boolean overridden
    }

    tenant_locations ||--o{ tenant_location_users : "covers"
    tenant_locations ||--o{ pos_tickets : "records"

    subscriptions ||--o{ invoices : "generates"
    subscriptions ||--o{ billing_webhook_events : "tracked via"
    subscriptions ||--|| plans : "references"

    menu_categories ||--o{ menu_items : "contains"
    menu_items ||--o{ menu_item_prices : "priced in"
    menu_items ||--o{ menu_item_modifiers : "optioned by"
    menu_items ||--|| menu_recipes : "defined by"

    menu_modifiers ||--o{ menu_item_modifiers : "applied to"

    menu_items ||--o{ pos_ticket_items : "sold on"
    pos_tickets ||--o{ pos_ticket_items : "breakdown"
    pos_tickets ||--o{ pos_payments : "paid via"
    pos_payments ||--o{ pos_payment_refunds : "refunds"
    tenants ||--o{ loyalty_accounts : "awards"
    loyalty_accounts ||--o{ loyalty_transactions : "history"
    tenants ||--|| loyalty_rules : "config"

    billing_webhook_events {
        uuid id
        string event_type
        jsonb payload
        text status
        integer attempts
    }

    event_outbox {
        bigserial id
        uuid tenant_id
        text event_type
        jsonb payload
        text status
    }

    pos_payment_refunds {
        uuid id
        uuid payment_id
        numeric amount
        text status
    }

    loyalty_accounts {
        uuid id
        uuid tenant_id
        text external_customer_id
        integer balance
        text status
    }

    loyalty_transactions {
        uuid id
        uuid account_id
        loyalty_transaction_type type
        integer points
    }

    loyalty_rules {
        uuid tenant_id
        numeric earn_rate
        numeric redeem_rate
        integer min_redeem_points
        integer expiration_days
    }
